# local-domain-expert-vault

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dashboard.md  LICENSE  PACKAGE_MANIFEST.md  README.md  README_EN.md  SCHEMA.md  pyproject.toml
.claude/: settings.json
.claude/agents/: wiki-curator.md
.claude/commands/: agenda-help.md  ask-kb.md  audit-experiment-plan.md  compare-papers.md  compile-raw.md  daily-arxiv-scout.md  expert.md  focus-track-review.md  focus-track-status.md  focus-track-update.md  gemini-idea-prompt.md  graph-help.md  import-paper.md  ingest-paper.md  kb-help.md  link-notes.md  maintain-kb.md  plan-experiment.md  read-paper.md  recall.md  research-agenda-review.md  research-agenda-update.md  search-kb.md  update-concepts.md  weekly-review.md
.claude/scripts/: arxiv_ranker.py  (+127 more)
.claudian/: claudian-settings.json
.obsidian/: app.json  community-plugins.json  daily-notes.json  graph.json
apps/desktop-adapter/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-adapter/src-tauri/capabilities/: default.json
apps/desktop-adapter/src-tauri/src/: lib.rs  main.rs
docs/: AUTOMATION.md  DEPLOYMENT_CHECKLIST.md  DESKTOP_ADAPTER.md  GETTING_STARTED.md  MAINTAINER_CHECKLIST.md  OBSIDIAN_CLAUDIAN_SETUP.md  SECURITY_AND_PRIVACY.md  SECURITY_PLUGIN_WORKBENCH.md  ZOTERO_STORAGE.md
raw/: .gitkeep
templates/: 实验规划模板.md  文献笔记模板.md  概念笔记模板.md  项目笔记模板.md
tests/: test_kb_search.py  test_public_package_scan.py  test_public_smoke_cli.py
tools/: build_github_package.ps1  scan_public_package.py
wiki/: GRAPH_GUIDE.md  INDEX.md
(+1399 files in other folders)
